# AIOps

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  ROADMAP.md  SPEC.md  agents.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
.uploads/: 1edcd8ce-4199-4a34-9305-7593bda296b8_AIOps_Code_Review_Report.md
backend/: .coverage  DEPENDENCY.md  Dockerfile  SPEC.md  alembic.ini  conftest.py  init.sql  pyproject.toml
backend/app/: __init__.py  api.py  main.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  failure_cluster.py  health.py  jwt.py  llm_client.py  logging.py  login_lockout.py  metrics.py  prompt_safety.py  rate_limit.py  redis.py  security.py  task_registry.py  token_blacklist.py
backend/app/core/errors/: __init__.py  auth.py  base.py  resource.py  system.py
backend/app/domains/agents/: SPEC.md  __init__.py  a2a.py  budget_redis.py  executor.py  memory.py  model_router.py  models.py  planning.py  query_rewrite.py  router.py  scheduler.py  self_diagnose.py  service.py  tuning.py
backend/app/domains/agents/tests/: __init__.py  test_agents.py
backend/app/domains/analytics/: SPEC.md  __init__.py  models.py  router.py  service.py
backend/app/domains/analytics/tests/: __init__.py  test_analytics.py
backend/app/domains/auth/: API.spec.yaml  DATA.spec.md  SPEC.md  __init__.py  models.py  router.py  service.py
backend/app/domains/evals/: SPEC.md  __init__.py  judge.py  models.py  router.py  service.py
backend/app/domains/evals/tests/: __init__.py  eval_llm_as_judge.py  test_evals.py
backend/app/domains/knowledge/: SPEC.md  __init__.py  chunker.py  embedder.py  models.py  parser.py  router.py  service.py
backend/app/domains/knowledge/tests/: __init__.py  test_knowledge.py
backend/app/domains/models/: SPEC.md  __init__.py  models.py  router.py  service.py
backend/app/domains/models/tests/: __init__.py  test_models.py
backend/app/domains/prompts/: SPEC.md  __init__.py  models.py  router.py  service.py
backend/app/domains/prompts/tests/: __init__.py  test_prompts.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_seed_models.py  0003_add_performance_indexes.py  0004_add_agent_schedule.py  0005_add_eval_samples.py  0006_add_agent_memory.py  0007_add_eval_sample_priority.py
backend/scripts/: check_schema_consistency.py
backend/tests/: conftest.py  factories.py  test_agents_a2a.py  test_agents_budget_redis.py  test_agents_execution.py  test_agents_executor.py  test_agents_memory.py  test_agents_model_router.py  test_agents_planning.py  test_agents_query_rewrite.py  test_agents_scheduler.py  test_agents_self_diagnose.py  test_agents_tuning.py  test_analytics_aggregation.py  test_api_agents.py  test_api_analytics.py  test_api_auth.py  test_api_contract.py  test_api_evals.py  test_api_health.py  test_api_knowledge.py  test_api_models.py  test_api_prompts.py  test_core_config.py  test_core_database.py  test_core_deps.py  test_core_exceptions.py  test_core_health.py  test_core_llm_client.py  test_core_logging.py  test_core_metrics.py  test_core_rate_limit.py  test_core_security.py  test_eval_suite.py  test_evals_online.py  test_failure_cluster.py  test_knowledge_embedder.py  test_knowledge_parser.py  test_knowledge_pipeline.py  test_main.py  (+3 more)
frontend/: SPEC.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/coverage/: index.html
frontend/coverage/frontend/: index.html  playwright.config.ts.html
frontend/coverage/frontend/e2e/: fixtures.ts.html  index.html
frontend/coverage/frontend/src/: App.vue.html  index.html  (+2 more)
frontend/e2e/: fixtures.ts  models.spec.ts  prompt-version-rollback.spec.ts  prompts.spec.ts  smoke.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.vue  main.ts  router-meta.d.ts  router.ts  style.css
frontend/src/shared/: error-handler.ts
frontend/src/views/: AgentsView.vue  AnalyticsView.vue  DashboardView.vue  EvalsView.vue  KnowledgeView.vue  LoginView.vue  ModelsView.vue  NotFoundView.vue  PromptsView.vue
ops/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  nginx.conf
ops/grafana/: dashboard.json
ops/k8s/: deployment.yaml  ingress.yaml  networkpolicy.yaml
ops/prometheus/: alerts.yml  scrape.yml
specs/: deployment.spec.md  errors.spec.md  migration.spec.md  observability.spec.md  openapi.yaml  security.spec.md  testing.spec.md
(+109 files in other folders)
