[project]
name = "aiops-console-backend"
version = "0.1.0"
description = "AIOps Console — AI 原生运营控制台后端"
requires-python = ">=3.10"
readme = "SPEC.md"
license = { text = "Proprietary" }
authors = [{ name = "AIOps Team" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "httpx>=0.27",
    "redis>=5.2",
    # JWT：PyJWT 是活跃维护的实现，python-jose 已停止维护（最后发布 2022）。
    # PyJWT 2.x 直接返回 str（jose 1.x 返回 bytes），API 简洁。
    "pyjwt>=2.8",
    # bcrypt 直接调用：passlib 1.7.4 与 bcrypt >= 4.1 不兼容（passlib 读取已删除的
    # __about__ 属性），且 passlib 维护停滞。bcrypt 4.x 内置类型注解。
    "bcrypt>=4.0",
    "python-multipart>=0.0.12",
    # EmailStr（auth 域 UserCreate/LoginRequest）依赖 email-validator 运行期校验
    "email-validator>=2.1",
    # 知识库文档解析（knowledge.spec.md§P3-13）：纯 Python 实现，无系统级依赖
    # pypdf 提取 PDF 文本，python-docx 提取 DOCX 段落，避免二进制当 UTF-8 decode 静默损坏
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    # 测试用 SQLite async 驱动（conftest 以 sqlite+aiosqlite:///:memory: 跑 L1/L2）
    "aiosqlite>=0.20",
    # L2 契约测试（schemathesis）：覆盖所有 OpenAPI 端点的状态码/schema 校验
    "schemathesis>=3.36",
    # 数据库迁移（specs/migration.spec.md §3）：ORM 单一真源，autogenerate 派生迁移
    "alembic>=1.13",
    # 限流测试用 fakeredis（security.spec.md§5）：无需真实 Redis 即可验证滑动窗口逻辑
    # A1：fakeredis[lua] 提供 Lua 脚本支持，RedisBudgetTracker 测试用 fakeredis
    # 验证 ZSET+HASH 原子操作（生产 Redis 内置 Lua，无需额外依赖）。
    "fakeredis[lua]>=2.20",
]
# P1-4：cross-encoder 本地 reranker。重依赖（torch + transformers，约 2GB+），
# 作为可选 extras 单独安装，未安装时 rerank 自动回退到 LLM rerank。
# 安装：pip install -e ".[reranker]"
reranker = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app", "tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=app --cov-fail-under=80 --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI 的 Depends()/Query()/Body() 等在默认参数中是框架约定，B008 误报
"app/**/router.py" = ["B008"]
"app/main.py" = ["B008"]
"app/core/security.py" = ["B008"]
"app/core/deps.py" = ["B008"]
"app/domains/auth/router.py" = ["B008"]
# 测试允许 B017 (pytest.raises(Exception))
"tests/*" = ["B017"]
"app/**/tests/*" = ["B017"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

# pypdf / python-docx 暂未提供 py.typed 类型存根，忽略缺失导入
# （运行期行为已由 tests/test_knowledge_parser.py 覆盖）
[[tool.mypy.overrides]]
module = ["pypdf.*", "docx.*"]
ignore_missing_imports = true

# P1-4：sentence-transformers 为可选重依赖（reranker extras），暂未提供 py.typed
[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true
